# mlx-serve

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  models.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  configuration.md  development.md
src/: config.py  events.py  inline_manager.py  main.py  metrics.py  process_manager.py  router.py
src/mlx_serve/: __init__.py  _default_models.yaml  cli.py  config.py  events.py  inline_manager.py  logging_config.py  main.py  metrics.py  process_manager.py  router.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_events.py  test_metrics.py
